Change index.html to try out other kinds of tags

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <em>By ya boi Harry</em>
+        <p><strong>Once upon a time,</strong> there was a boi.
+        This boi would play many tricks on his fellow people,
+        so they came up with a plan.</p>
+        <p>Well ok, they didn't, but this is a story ok?</p>
     </body>
 </html>
