Add initial recipes and links to them

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <ul>
+      <li><a href="recipes/kaesespaetzle.html">Käsespätzle</a></li>
+      <li><a href="recipes/pasta-with-pesto.html">Pasta with Pesto</a></li>
+      <li><a href="recipes/popcorn.html">Popcorn</a></li>
+    </ul>
   </body>
 </html>
