Add content for Käsespätzle recipe

--- a/odin-recipes/recipes/kaesespaetzle.html
+++ b/odin-recipes/recipes/kaesespaetzle.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Käsespätzle | Odin Recipes</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Käsespätzle</h1>
-</body>
+    <img src="../images/kaesespaetzle-mit-zwiebeln-und-schnittlauch.jpg" alt="An image of Käsespätzle" width="480" height="480" >
+    <h2>Description</h2>
+    <p>Käsespätzle is a simple traditional Austrian dish. It is mainly
+    a combination of "Käse" (cheese) and "Spätzle", which are small pieces of
+    dough, remotely similar to pasta. While it will taste better if you make
+    the dough for the Spätzle yourself, this is more effort, so we will resort
+    to premade Spätzle instead in this recipe.</p>
+    <h2>Ingredients (per person)</h2>
+    <ul>
+        <li>250g Spätzle</li>
+        <li>300g cheese (typically "Hüttenkäse")</li>
+        <li>1 onion</li>
+        <li>Some oil, e.g. olive oil or vegetable oil</li>
+        <li>salt</li>
+        <li>pepper</li>
+        <li>water (amount should be given on the Spätzle package)</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Slice the onion into strips</li>
+        <li>Grate the cheese finely</li>
+        <li>Put a bit of oil in a pan and heat it up at medium-low heat, then
+        add the sliced onion. The pan should be big enough to also contain the
+        cheese and Spätzle later</li>
+        <li>In a pot, bring water to a boil. Then salt the water heavily and add
+        the Spätzle</li>
+        <li>Wait for the time given on the Spätzle package, then try some of it
+        for doneness, it should have expanded quite a bit, but still be chewy.
+        Meanwhile the onion should slowly simmer to the point that it is pretty
+        translucent. If the onion looks finished or is starting to turn darker,
+        just kill the heat</li>
+        <li>When both are finished, drain the Spätzle and add it to the onion
+        pan, along with the grated cheese. At this point, the Spätzle should
+        still be hot enough to melt the cheese, optionally you can add a bit of
+        heat. Mix quickly to spread the cheese evenly. Salt and pepper to taste
+        </li>
+    </ol>
+    <h2>Enjoy!</h2>
+  </body>
 </html>
