Add content for popcorn recipe

--- a/odin-recipes/recipes/popcorn.html
+++ b/odin-recipes/recipes/popcorn.html
@@ -3,9 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Popcorn | Odin recipes</title>
+    <title>Popcorn | Odin Recipes</title>
   </head>
   <body>
     <h1>Popcorn</h1>
+    <img src="../images/popcorn.jpg" alt="An image of Popcorn" />
+    <h2>Description</h2>
+    <p>
+      Popcorn is a specific type of corn, that pops when heated up with some
+      oil. As you might expect, this recipe is very simple.
+    </p>
+    <h2>Ingredients (per 100g of popcorn)</h2>
+    <ul>
+      <li>100g "raw" popcorn</li>
+      <li>50g oil</li>
+      <li>
+        other ingredients you might want to add: salt/sugar, caramel, other
+        spices...
+      </li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Heat up the oil on medium-low heat in a pot with a lid</li>
+      <li>Add the raw popcorn, if you haven't done so put on the lid</li>
+      <li>
+        The popcorn will start to audibly pop (keep the lid on to make sure that
+        it doesn't jump out). Every now and then, shake up the pot a bit to
+        prevent the corn from burning.
+      </li>
+      <li>
+        If almost all the corn popped, it is done. You probably won't get all of
+        the corn to pop.
+      </li>
+      <li>Now you can add salt and other optional ingredients.</li>
+    </ol>
+    <h2>Enjoy!</h2>
   </body>
 </html>
