Add content for pasta with pesto recipe

--- a/odin-recipes/recipes/pasta-with-pesto.html
+++ b/odin-recipes/recipes/pasta-with-pesto.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pasta with Pesto | Odin recipes</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Pasta with Pesto</h1>
-</body>
+    <img src="../images/pasta_with_pesto.jpg" alt="" />
+    <p>
+      With Italy as my neighbor country, pasta and pesto are commonplace in
+      supermarkets and a staple for students or families.
+    </p>
+    <h2>Ingredients (per adult)</h2>
+    <ul>
+      <li>250g pasta</li>
+      <li>50g pesto</li>
+      <li>50g parmesan (ideally not grated beforehand)</li>
+      <li>water</li>
+      <li>salt</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Put water in a pot (enough to cover the pasta when it is softened) and
+        bring it to a boil
+      </li>
+      <li>
+        Salt heavily, then add the pasta. Give it a stir. You can now turn down
+        the heat a little bit, it should simmer but it doesn't have to boil.
+        Cover half of the pot with a lid to preserve the heat
+      </li>
+      <li>
+        Wait for the time given on the pasta packaging. Then try some noodles.
+        You want them to still have a bit of bite, so ideally you should stop
+        heating them as they are a bit too tough, because they will continue to
+        cook a bit afterwards
+      </li>
+      <li>
+        Drain the pasta, mix it with the pesto, grate and add parmesan as you
+        like
+      </li>
+    </ol>
+    <h2>Enjoy!</h2>
+  </body>
 </html>
