Style odin-recipes with box-model CSS

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="index">
       <li><a href="recipes/kaesespaetzle.html">Käsespätzle</a></li>
       <li><a href="recipes/pasta-with-pesto.html">Pasta with Pesto</a></li>
       <li><a href="recipes/popcorn.html">Popcorn</a></li>
